# kuka_fri_control

computer_side/: CMakeLists.txt  README.md  main.cpp
computer_side/kukafri/: apiserver.hpp  helper_functions.hpp
computer_side/lockfree/: lockfree.hpp
computer_side/planer/: trajectory.cpp  trajectory.hpp
computer_side/udp/: udp_server.hpp
